Flexy Tools: Debugging mobile browser off-centering + Debugging persistent off-centering issue in several mobile browsers + Temporary colored backgrounds for key editor blocks + Explicitly set split-screen flex children to 50% width, 100% for single column

--- a/app.css
+++ b/app.css
@@ -43,6 +43,8 @@ a:active {
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
+	background-color: grey;
+	border: 1px solid black;
 	/* margin-left: 32px; */
 }
 
@@ -99,10 +101,12 @@ user-select: none;
 }
 
 #notation-container {
-	width: 50%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	background-color: gold;
+	border: 1px solid orange;
 }
 
 #notation-holder {
@@ -1910,12 +1914,16 @@ z-index: 100;
 padding-bottom:16px;
 /* margin-left: 16px;  */
 display:none;
+background-color: transparent;
+border: 1px solid green;
 }
 
 #notation-spacer{
 background-color: white;
-width:850px;
-margin-right: 24px;
+width:50%;
+/* margin-right: 24px; */
+background-color: pink;
+border: 1px solid red;
 }
 
 #shareurlcaption{
@@ -2000,6 +2008,8 @@ font-size:12pt;
 display:none;
 width:850px;
 background-color:white;
+background-color:cyan;
+border: 1px solid blue;
 }
 
 #notation-placeholder-text{
@@ -6359,6 +6369,15 @@ padding-right: 30px; /* space for badge */
 		flex-direction: row;
 		justify-content: center;
 		align-items: flex-start;
+	}
+
+	#notation-spacer {
+		margin-right: 24px;
+	}
+
+	#notation-container,
+	#notation-spacer {
+		width: 50%;
 	}
 
 	#noscroller {
